[tool.poetry]
name = "raystack-frontier-api"
version = "0.1.0"
description = "Frontier APIs"
authors = ["Kush Sharma <thekushsharma@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "frontier_api"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = ">= 14.5.14"
frozendict = "~2.3.4"
python-dateutil = "~2.7.0"
setuptools = ">= 21.0.0"
typing_extensions = "^4.3.0"
urllib3 = "~1.26.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
